feat(apps/server): add auth/login and requireAuth, requireAdmin middlewares, update docker files
