# apps/server/src/api/v1/index.ts
@@ -1,8 +1,10 @@
 import { Router } from "express";
+import authRoutes from "./auth.routes.js";
 import companyRoutes from "./companies.routes.js";
 
-const router = Router();
+const router: Router = Router();
 
 router.use("/companies", companyRoutes);
+router.use("/auth", authRoutes);
 
 export default router;
